# template-ddframework

./: .gitignore  GDD.md  README.md  pyproject.toml
assets/: spritesheet.ase
src/zegame/: __main__.py  compsys.py  config.py  launchers.py  types.py  utils.py
src/zegame/assets/: spritesheet.json
src/zegame/states/: __init__.py  game.py  highscores.py  instructions.py  selfcheck.py  splash.py  title.py
